<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AideActivity"
    android:orientation="vertical">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/consult"
        android:onClick="hide"
        android:backgroundTint="@color/white"
        android:textStyle="bold|italic"
        android:gravity="start"
        android:drawableRight="@drawable/slider"/>
    <TextView
        android:id="@+id/txtConsult"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:text="@string/consult_text"
        android:textSize="15dp"
        android:onClick="hide"
        android:visibility="invisible"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/hospital_appointment"
        android:onClick="hide"
        android:backgroundTint="@color/white"
        android:textStyle="bold|italic"
        android:gravity="start"
        android:drawableRight="@drawable/slider"/>
    <TextView
        android:id="@+id/txtAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hosptal_appointment_text"
        android:textSize="15dp"
        android:onClick="hide"
        android:visibility="invisible"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/show_consult"
        android:onClick="hide"
        android:backgroundTint="@color/white"
        android:textStyle="bold|italic"
        android:gravity="start"
        android:drawableRight="@drawable/slider"/>
    <TextView
        android:id="@+id/txtShowConsult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_consult_text"
        android:textSize="15dp"
        android:onClick="hide"
        android:visibility="invisible"/>

</LinearLayout>