<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultationActivity"
    android:background="@drawable/bcg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temperature"
                android:textColorHint="@color/black"
                android:textSize="34sp"
                android:textColor="@android:color/black"
                android:inputType="text"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_presure"
                android:layout_marginLeft="150dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tension"
                android:textColorHint="@color/black"
                android:textSize="34sp"
                android:textColor="@android:color/black"
                android:inputType="text"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/poids"
                android:textColorHint="@color/black"
                android:textSize="34sp"
                android:textColor="@android:color/black"
                android:inputType="text"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_grp"
                android:layout_marginLeft="125dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/grp_sang"
                android:textColorHint="@color/black"
                android:textSize="34sp"
                android:textColor="@android:color/black"
                android:inputType="text"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symptoms"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/symptoms"
                android:textColorHint="@color/black"
                android:textSize="34sp"
                android:textColor="@android:color/black"
                android:inputType="text"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagnostic"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diagnostics"
                android:textColorHint="@color/black"
                android:textSize="34sp"
                android:textColor="@android:color/black"
                android:inputType="text"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prescription"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prescription"
                android:textColorHint="@color/black"
                android:textSize="34sp"
                android:textColor="@android:color/black"
                android:inputType="text"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/soumettre"
            android:text="@string/submit"
            android:layout_marginLeft="145dp"/>
    </LinearLayout>


</RelativeLayout>